# axum-testing

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_tickets.rs
tests/: quick_dev.rs
