[package]
name = 'rust_axum'
version = "0.1.0"
edition = '2021'

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = { version = '1.0.195', features = ['derive'] }
serde_json = '1.0.111'
tower-http = { version = "0.5.1", features = ["fs"] }
tower-cookies = '0.10.0'

[dev-dependencies]
anyhow = '1'
httpc-test = '0.1.8'
